[gd_scene load_steps=2 format=3 uid="uid://dpdnqwqlvfnty"]

[ext_resource type="Script" path="res://Scripts/UI/SaveLoadMenu.gd" id="1_5d3xq"]

[node name="SaveLoadMenu" type="Control"]
layout_mode = 1
anchors_left = 0.5
anchors_top = 0.5
anchors_right = 0.5
anchors_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
script = ExtResource("1_5d3xq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game"
theme_override_font_sizes/font_size = 24

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
